# civ6-mac-updater

./: Cargo.toml  README.md  values.json
src/: args.rs  main.rs  utils.rs
