[package]
name = "civ6-mac-updater"
description = "Updates Civ VI version for Mac to prevent host version mismatch error."
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alex-stout/civ6-mac-updater"
repository = "https://github.com/alex-stout/civ6-mac-updater"
documentation = "https://github.com/alex-stout/civ6-mac-updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
owo-colors = "3.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["blocking"] }

[dev-dependencies]
cargo-husky = "1"
